# libnumerical

./: CMakeLists.txt  README.md
include/: five_diagonal_matrix.h  interpolator.h  libnumerical.h  linear_solver.h  logger.h  one_diagonal_matrix.h  sqare_matrix.h  square_matrix.h  table.h  three_diagonal_matrix.h  vector.h
src/: five_diagonal_matrix.cpp  interpolator.cpp  linear_solver.cpp  logger.cpp  one_diagonal_matrix.cpp  square_matrix.cpp  table.cpp  three_diagonal_matrix.cpp  vector.cpp
tests/: interpolation.cpp  matrix_operations.cpp  solar_system.csv  table.csv  table.plotdata  table.tsv  table_read_test.cpp  table_test.cpp  three_diagonal_multiplication.cpp
